// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
.pf-c-modal-box {
  display: flex;
  position: relative;
  z-index: 600;
  flex-direction: column;
  max-width: calc(100% - 1rem - 1rem);
  min-height: calc(undefined + undefined + undefined + undefined + undefined + undefined + calc(1rem * 4 * 1.5));
  max-height: calc(100vh - 3rem);
  background-color: #ffffff;
  border: 1px solid transparent;
  box-shadow: 0 0.1875rem 0.4375rem 0.1875rem rgba(3, 3, 3, 0.13), 0 0.6875rem 1.5rem 1rem rgba(3, 3, 3, 0.12);
}

<div
  aria-describedby="id"
  aria-label="test title"
  aria-modal="true"
  className="pf-c-modal-box"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isLarge 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: flex;
  position: relative;
  z-index: 600;
  flex-direction: column;
  max-width: calc(100% - 1rem - 1rem);
  min-height: calc(undefined + undefined + undefined + undefined + undefined + undefined + calc(1rem * 4 * 1.5));
  max-height: calc(100vh - 3rem);
  background-color: #ffffff;
  border: 1px solid transparent;
  box-shadow: 0 0.1875rem 0.4375rem 0.1875rem rgba(3, 3, 3, 0.13), 0 0.6875rem 1.5rem 1rem rgba(3, 3, 3, 0.12);
}

<div
  aria-describedby="id"
  aria-label="Test Modal title"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isOpen 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: flex;
  position: relative;
  z-index: 600;
  flex-direction: column;
  max-width: calc(100% - 1rem - 1rem);
  min-height: calc(undefined + undefined + undefined + undefined + undefined + undefined + calc(1rem * 4 * 1.5));
  max-height: calc(100vh - 3rem);
  background-color: #ffffff;
  border: 1px solid transparent;
  box-shadow: 0 0.1875rem 0.4375rem 0.1875rem rgba(3, 3, 3, 0.13), 0 0.6875rem 1.5rem 1rem rgba(3, 3, 3, 0.12);
}

<div
  aria-describedby="id"
  aria-label="Test Modal title"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  isOpen={true}
  role="dialog"
>
  This is a ModalBox
</div>
`;
